--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>hello</h1>
+    <head>
+        <title>Shanghai License Plate Auction</title>
+    </head>
+    <body>
+        <h1>hello</h1>
 
-</body>
+    </body>
 </html>
