--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Shanghai License Plate Auction</title>
     </head>
     <body>
-        <h1>hello</h1>
+        <h1>Shanghai License Plate Auction </h1>
         <p>hellohello</p>
     </body>
 </html>
