--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Shanghai License Plate Auction</title>
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
         <h1>Shanghai License Plate Auction </h1>
