--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
         <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
+        <nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
         <h1>Shanghai License Plate Auction </h1>
         <p>hellohello</p>
     </body>
