--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Shanghai License Plate Auction </h1>
+        <img src="/img/prices.png" alt="license plate prices">
         <p>hellohello</p>
     </body>
 </html>
