--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <body>
         <h1>Shanghai License Plate Auction </h1>
         <img src="https://cf4ff.github.io/uvammm-license-auction/img/prices.png" alt="license plate prices">
+        <img src="https://cf4ff.github.io/uvammm-license-auction/img/pricediff.png" alt="average price and minimum price difference">
+        <img src="https://cf4ff.github.io/uvammm-license-auction/img/quota.png" alt="license plate quota and num of applicants">
+        <img src="https://cf4ff.github.io/uvammm-license-auction/img/macro.png" alt="macro factors">
         <p>hellohello</p>
     </body>
 </html>
