--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Shanghai License Plate Auction </h1>
+        <h5>UVA CS4501 Markets Mechanisms and Machines Final Project</h5>
+        <h5>Chang Feng, Caroline Zhao, Kathy Wang</h5>
         <div>
             <h2>Motivation</h2>
             <p>As Holt’s paper showed, Shanghai’s new auction format was able to reduce the license price in lab simulation. In actuality, however, after implementing the new auction format, the license price at first drastically grew up and then stabilized at a much higher price level. Our study was to discover whether the new auction format has actually led to the price increase.</p> 
