--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
         <h5>Chang Feng, Caroline Zhao, Kathy Wang</h5>
         <div>
             <h2>Motivation</h2>
-            <p>As Holt’s paper showed, Shanghai’s new auction format was able to reduce the license price in lab simulation. In actuality, however, after implementing the new auction format, the license price at first drastically grew up and then stabilized at a much higher price level. Our study was to discover whether the new auction format has actually led to the price increase.</p> 
+            <p>Traffic congestion is one of the biggest problems facing big cities such as New York and Shanghai.
+                To </p>
+            <p>As Holt’s paper showed, Shanghai’s new auction format was able to reduce the license price in lab simulation. 
+                In actuality, however, after implementing the new auction format, 
+                the license price at first drastically grew up and then stabilized at a much higher price level. 
+                Our study was to discover whether the new auction format has actually led to the price increase.</p> 
         </div>
         
         <img src="https://cf4ff.github.io/uvammm-license-auction/img/prices.png" alt="license plate prices">
