--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
         <h5>Chang Feng, Caroline Zhao, Kathy Wang</h5>
         <div>
             <h2>Motivation</h2>
-            <p>Traffic congestion is one of the biggest problems facing big cities such as New York and Shanghai.
-                To </p>
-            <p>As Holt’s paper showed, Shanghai’s new auction format was able to reduce the license price in lab simulation. 
+            <p>Increasing traffic congestion is one of the biggest problems facing big cities such as New York and Shanghai.
+                To tackle this challenge, cities have been trying out different market mechanisms to curb increasing traffic. 
+                New York have been thinking about implementing road congestion pricing. 
+                Shanghai, however, decided to curb traffic by auctioning off a limited supply license plates every month.
+                </p>
+            <p>This project takes inspiration from Prof. Holt's 2013 paper on Shanghai license plate auctions. 
+                In a lab setting, Holt demonstrated that Shanghai’s new auction format was able to reduce the license price in lab simulation. 
                 In actuality, however, after implementing the new auction format, 
                 the license price at first drastically grew up and then stabilized at a much higher price level. 
                 Our study was to discover whether the new auction format has actually led to the price increase.</p> 
