--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
                 To tackle this challenge, cities have been trying out different market mechanisms to curb increasing traffic. 
                 New York have been thinking about implementing road congestion pricing. 
                 Shanghai, however, decided to curb traffic by auctioning off a limited supply license plates every month.
+                Up until 2008, Shanghai have been using a closed information, single bid auctioning format. But as license plate price
+                soared, Shanghai decided to switch auctioning format by allowing bidder to revise their bids. Our project aims to determine
+                whether the new format helped with curbing the rising license prices. 
                 </p>
             <p>This project takes inspiration from Prof. Holt's 2013 paper on Shanghai license plate auctions. 
                 In a lab setting, Holt demonstrated that Shanghai’s new auction format was able to reduce the license price in lab simulation. 
@@ -22,10 +25,14 @@
                 Our study was to discover whether the new auction format has actually led to the price increase.</p> 
         </div>
         
-        <img src="https://cf4ff.github.io/uvammm-license-auction/img/prices.png" alt="license plate prices">
-        <img src="https://cf4ff.github.io/uvammm-license-auction/img/pricediff.png" alt="average price and minimum price difference">
-        <img src="https://cf4ff.github.io/uvammm-license-auction/img/quota.png" alt="license plate quota and num of applicants">
-        <img src="https://cf4ff.github.io/uvammm-license-auction/img/macro.png" alt="macro factors">
+        <div>
+            <h2>Data Visualization</h2>
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/prices.png" alt="license plate prices">
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/pricediff.png" alt="average price and minimum price difference">
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/quota.png" alt="license plate quota and num of applicants">
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/macro.png" alt="macro factors">
+            
+        </div>
         <p>hellohello</p>
     </body>
 </html>
