--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h5>UVA CS4501 Markets Mechanisms and Machines Final Project</h5>
         <h5>Chang Feng, Caroline Zhao, Kathy Wang</h5>
         <div>
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/azlicense.jpg" alt="azlicense">
             <h2>Motivation</h2>
             <p>Increasing traffic congestion is one of the biggest problems facing big cities such as New York and Shanghai.
                 To tackle this challenge, cities have been trying out different market mechanisms to curb increasing traffic. 
@@ -16,8 +17,11 @@
                 Shanghai, however, decided to curb traffic by auctioning off a limited supply license plates every month.
                 Up until 2008, Shanghai have been using a closed information, single bid auctioning format. But as license plate price
                 soared, Shanghai decided to switch auctioning format by allowing bidder to revise their bids. Our project aims to determine
-                whether the new format helped with curbing the rising license prices. 
-                </p>
+                whether the new format helped with curbing the rising license prices. </p>
+        </div>
+        <div>
+            <h2>A little about the auction</h2>
+            <p></p>
             <p>This project takes inspiration from Prof. Holt's 2013 paper on Shanghai license plate auctions. 
                 In a lab setting, Holt demonstrated that Shanghai’s new auction format was able to reduce the license price in lab simulation. 
                 In actuality, however, after implementing the new auction format, 
