--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 whether the new format helped with curbing the rising license prices. </p>
         </div>
         <div>
-            <h2>A little about the auction</h2>
+            <h2>A Little About The Auction</h2>
             <p>Prior to 2008, Shanghai used an auction format where bidders submit their bid once, and the highest bidders get allocated
                 with the license plates. The pricing is "discriminatory", meaning that the winning bidders pay their own bids. 
                 The only information available is the minimum accepted price of the previous rounds. </p>
@@ -42,8 +42,6 @@
                     relative importance of the two components of the new Shanghai auction, 
                     the initial bid and the revisions of the initial bid.</li> 
             </ul>
-
-            
             <p>In a lab setting, Holt demonstrated that Shanghai’s new auction format was able to reduce the license price. 
                 In actuality, however, after implementing the new auction format, 
                 the license price at first drastically grew up and then stabilized at a much higher price level. 
