--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
         
         <div>
             <h2>Data Visualization</h2>
+            <p>First, we plotted out different data against time to see if there is any notable differences between before and after
+                the change in auction format: </p>
+            <p>This graph shows the average and minimum price for the license plates:</p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/prices.png" alt="license plate prices">
+            <p>As we can see, the change in auction format seemingly only had a short term effect in curbing the prices. The price steadily
+                increases throughout the years, and plateaued in 2017. Another pattern can be observed from the graphs: the difference
+                between average and minimum price have been getting small and after 2014, they seem to be perfectly tracking each other. 
+                Here is the plot to get a better look: </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/pricediff.png" alt="average price and minimum price difference">
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/quota.png" alt="license plate quota and num of applicants">
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/macro.png" alt="macro factors">
