--- a/index.html
+++ b/index.html
@@ -50,16 +50,21 @@
         
         <div>
             <h2>Data Visualization</h2>
-            <p>First, we plotted out different data against time to see if there is any notable differences between before and after
+            <p>First, we plotted different data against time to see if there is any notable differences between before and after
                 the change in auction format: </p>
             <p>This graph shows the average and minimum price for the license plates:</p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/prices.png" alt="license plate prices">
-            <p>As we can see, the change in auction format seemingly only had a short term effect in curbing the prices. The price steadily
-                increases throughout the years, and plateaued in 2017. Another pattern can be observed from the graphs: the difference
-                between average and minimum price have been getting small and after 2014, they seem to be perfectly tracking each other. 
-                Here is the plot to get a better look: </p>
+            <p>As we can see, the change in auction format seemingly only had a short term effect in curbing the prices. After the 
+                auction format changed in 2008, we did see a decrease in price. However since then, the price has steadily recovered, 
+                continue to increase throughout the years, and plateaued in 2017. Another pattern can be observed from the graphs: 
+                the difference between average and minimum price have been getting smaller and after 2014, 
+                they seem to be perfectly tracking each other. Here is the plot to get a better look: </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/pricediff.png" alt="average price and minimum price difference">
+            <p>We could probably contribute this trend to the price window around minimum accepted bid where all revisions must fall within. 
+                Next we looked at the number of license plates under auction each month and the number of bidders: </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/quota.png" alt="license plate quota and num of applicants">
+            <p>In fact, Shanghai has been increasing its quotas every year. The number of license plates available in 2018 is about 10 times
+            what it was in 2002. However, this effort dwarfs in comparison with the increase in bidders through out the years. </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/macro.png" alt="macro factors">
             
         </div>
