--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                 Next we looked at the number of license plates under auction each month and the number of bidders: </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/quota.png" alt="license plate quota and num of applicants">
             <p>In fact, Shanghai has been increasing its quotas every year. The number of license plates available in 2018 is about 10 times
-            what it was in 2002. However, this effort dwarfs in comparison with the increase in bidders through out the years. </p>
+            what it was in 2002. However, this effort dwarfs in comparison with the increase in bidders through out the years. 
+            Finally, we plotted other socio-economic factors that we thought might be correlated with bid prices: </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/macro.png" alt="macro factors">
             
         </div>
