--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 auction format changed in 2008, we did see a decrease in price. However since then, the price has steadily recovered, 
                 continue to increase throughout the years, and plateaued in 2017. Another pattern can be observed from the graphs: 
                 the difference between average and minimum price have been getting smaller and after 2014, 
-                they seem to be perfectly tracking each other. Here is the plot to get a better look: </p>
+                they seem to be perfectly tracking each other. Here is another plot to get a better look: </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/pricediff.png" alt="average price and minimum price difference">
             <p>We could probably contribute this trend to the price window around minimum accepted bid where all revisions must fall within. 
                 Next we looked at the number of license plates under auction each month and the number of bidders: </p>
