--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                 the difference between average and minimum price have been getting smaller and after 2014, 
                 they seem to be perfectly tracking each other. Here is another plot to get a better look: </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/pricediff.png" alt="average price and minimum price difference">
-            <p>We could probably contribute this trend to the price window around minimum accepted bid where all revisions must fall within. 
+            <p>We could probably contribute this trend to the price window around minimum accepted bid where all revisions must 
+                fall within. This caused the bids to have a much tighter spread which is consist with the graph. 
                 Next we looked at the number of license plates under auction each month and the number of bidders: </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/quota.png" alt="license plate quota and num of applicants">
             <p>In fact, Shanghai has been increasing its quotas every year. The number of license plates available in 2018 is about 10 times
