--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <p>Prior to 2008, Shanghai used an auction format where bidders submit their bid once, and the highest bidders get allocated
                 with the license plates. The pricing is "discriminatory", meaning that the winning bidders pay their own bids. 
                 The only information available is the minimum accepted price of the previous rounds. </p>
-            <p>As the price license plates keeps rising, Shanghai government decided to change the auction format with the goal of lowering license
+            <p>As the price of license plates keeps rising, Shanghai government decided to change the auction format with the goal of lowering license
                 price for the bidders. The new auction allows for two revisions of initial bid prices. The revisions must fall within a narrow
                 price window of around $50 around the lowest accepted bid. </p>
         </div>
