--- a/index.html
+++ b/index.html
@@ -82,6 +82,19 @@
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/macro.png" alt="macro factors">
             
         </div>
-        <p>hellohello</p>
+        <div>
+            <h2>Models and Prediction</h2>
+            <h3>Data Selection</h3>
+            <p>We want to be able to predict average price and we decided to use the following as variables to formulate a predictor: </p>
+            <ul>
+                <li>number of applicants</li>
+                <li>number of license plates</li>
+                <li>Shanghai population</li>
+                <li>Urban CPI</li>
+                <li>Shanghai earnings</li>
+            </ul>
+            <p>We decided to use post-2008 data for training and pre-2008 data for testing. Our dataset only spans from 2008 to 
+                2018, we did this so that we would have 10 years of training data as opposed to only 5. </p>
+        </div>
     </body>
 </html>
