--- a/index.html
+++ b/index.html
@@ -100,14 +100,17 @@
             <h3>Linear Regression</h3>
             <p>The first model that we tried was linear regression. However, as shown in the results, the RMSE is too large for it 
                 to be a good predictor. </p>
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/linreg.png" alt="linear regression">
             <h3>Linear SVM</h3>
             <p>Linear SVM showed promise after we performed model regularization. The resulting RMSE is around 8590. This is the model
                 we used during class presentation. </p>
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/linsvm.png" alt="linear svm">
             <h3>Gradient Boosting Regression</h3>
             <p>It is possible that because we don't have a lot of data, a single model will not be able to do good job at predicting. 
                 Therefore, we experimented with ensemble learning methods and constructed a gradient boosting regression. Through this, 
                 our model is able to learn about its mistakes and improve upon them. The result is a huge improvement upon 
-                linear SVM model with a RMSE of 5460. 
+                linear SVM model with a RMSE of 5460. </p>
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/gbrt.png" alt="gradient boosting regression">
         </div>
         
         <div>
