--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         </div>
         
         <div>
-            <h2>Results</h2>
+            <h2>Prediction and Results</h2>
+            <p>After </p>
         </div>
         
     </body>
