--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
         
         <div>
             <h2>Prediction and Results</h2>
-            <p>After </p>
+            <p>We decided to do predictions using the gradient boosing model since it has the best performance. 
+                We also put in the linear SVM model as a baseline for comparison. We fit the models on post-2008 data
+                and made predictions. </p>
+            <img src="https://cf4ff.github.io/uvammm-license-auction/img/predictions.png" alt="predictions">
+            <p>As we can see, </p>
         </div>
         
     </body>
