--- a/index.html
+++ b/index.html
@@ -119,7 +119,16 @@
                 We also put in the linear SVM model as a baseline for comparison. We fit the models on post-2008 data
                 and made predictions. </p>
             <img src="https://cf4ff.github.io/uvammm-license-auction/img/predictions.png" alt="predictions">
-            <p>As we can see, </p>
+            <p>As we can see, our models over predict between 2008 and 2013 but do pretty well after 2013. This could be because
+                after the introduction of the new auction format, people are still searching for the best strategies to bid, which 
+                could cause the result not at equilibrium. </p>
+            <p>Looking at our predictions for pre-2008 data, it would seem that there is no statistically significant differences between 
+                the outcomes of the two formats when we factored in the RMSE. Therefore, we conclude that despite that the new auction
+                format was designed to reduce price, there is no evidence that it achieves that goal. </p>
+        </div>
+        
+        <div>
+            <h2>Discussion</h2>
         </div>
         
     </body>
