--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                 is supported in Holt's paper where it finds that "the auction process tend to produce a noisy, somewhat flat
                 correlation between bids and bidders’ private values in a very tight 'bid window'." And because of this, overall 
                 efficiency of the auction goes down. </p>
+            <p>Going forward, since our model is able to predict prices after 2013 pretty well, bidders in the future could utilize
+                our model to help them formulate their bids. As for suggestions for the government, the current auction format might
+                not be the most efficient one out there. Holt's paper suggested a lottery system, this has a lot of potential of 
+                reducing the price of license plates as well as limit the amount of traffic on the road. </p>
         </div>
         
     </body>
